--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Generated Binaries
+brokerApp
+frontApp
+
 # macOS noise
 .DS_Store
