Included a new authentication microservice. Integrated the frontend with this service via the broker-service.

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,13 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Generated Binaries
+# Generated binaries
+authApp
 brokerApp
 frontApp
+
+# Postgres volume
+db-data/
 
 # macOS noise
 .DS_Store
