--- a/broker-service/Dockerfile
+++ b/broker-service/Dockerfile
@@ -1,4 +1,4 @@
-# Base go image
+# Base go image for build
 FROM golang:1.18-alpine as builder
 RUN mkdir /app
 COPY . /app
@@ -6,7 +6,7 @@ WORKDIR /app
 RUN CGO_ENABLED=0 go build -o brokerApp ./cmd/api
 RUN chmod +x /app/brokerApp
 
-# Build a tiny docker image
+# Run the app in a tiny Linux image
 FROM alpine:latest
 RUN mkdir /app
 COPY --from=builder /app/brokerApp /app
