--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,5 +1,5 @@
 # Run the app in a tiny Linux image
 FROM alpine:latest
 RUN mkdir /app
-COPY authApp /app
-CMD [ "/app/authApp"]
+COPY frontApp /app
+CMD [ "/app/frontApp"]
