--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -2,6 +2,17 @@ version: '3'
 
 services:
 
+  front-end:
+      build:
+        context: ./../front-end
+        dockerfile: ./../front-end/Dockerfile
+      restart: always
+      ports:
+        - "80:80"
+      deploy:
+        mode: replicated
+        replicas: 1
+
   broker-service:
     build:
       context: ./../broker-service
