--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,5 +1,6 @@
 # Run the app in a tiny Linux image
 FROM alpine:latest
 RUN mkdir /app
-COPY frontApp /app
+COPY . /app
+WORKDIR /app
 CMD [ "/app/frontApp"]
