--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -13,17 +13,6 @@ services:
         mode: replicated
         replicas: 1
 
-  broker-service:
-    build:
-      context: ./../broker-service
-      dockerfile: ./../broker-service/Dockerfile
-    restart: always
-    ports:
-      - "8080:80"
-    deploy:
-      mode: replicated
-      replicas: 1
-
   authentication-service:
     build:
       context: ./../authentication-service
@@ -36,6 +25,26 @@ services:
       replicas: 1
     environment:
       DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+
+  broker-service:
+    build:
+      context: ./../broker-service
+      dockerfile: ./../broker-service/Dockerfile
+    restart: always
+    ports:
+      - "8080:80"
+    deploy:
+      mode: replicated
+      replicas: 1
+
+  logger-service:
+    build:
+      context: ./../logger-service
+      dockerfile: ./../logger-service/Dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
 
   postgres:
     image: 'postgres:14.0'
@@ -51,3 +60,14 @@ services:
       POSTGRES_DB: users
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+
+  mongo:
+    image: 'mongo:4.2.16-bionic'
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_DATABASE: logs
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - ./db-data/mongo/:/data/db
