Included a new listener service which takes advantage of RabbitMQ to handle async messages passing between microservices. Adapted log event flow to use this new communication mechanism.

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@ brokerApp
 frontApp
 loggerApp
 mailerApp
+listenerApp
 
-# Postgres volume
+# Postgres, Mongo and RabbitMQ volumes
 db-data/
 
 # macOS noise
