Implemented some adjustments in the frontend service. Included k8s configuration files for the frontend service and the ingress.

--- a/project/k8s/front-end.yml
+++ b/project/k8s/front-end.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: broker-service
+  name: front-end
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: broker-service
+      app: front-end
   template:
     metadata:
       labels:
-        app: broker-service
+        app: front-end
     spec:
       containers:
-      - name: broker-service
-        image: "fgarcialainez/broker-service:1.0.0"
+      - name: front-end
+        image: "fgarcialainez/front-end:1.0.0"
         resources:
           requests:
             memory: "64Mi"
@@ -22,6 +22,9 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "500m"
+        env:
+          - name: BROKER_URL
+            value: "http://broker-service.info"
         ports:
           - containerPort: 80
 
@@ -30,10 +33,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: broker-service
+  name: front-end
 spec:
   selector:
-    app: broker-service
+    app: front-end
   ports:
     - protocol: TCP
       name: main-port
