--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       deploy:
         mode: replicated
         replicas: 1
+      environment:
+        BROKER_URL: "http://localhost:8080"
 
   authentication-service:
     build:
